NetBSD Problem Report #47364

From www@NetBSD.org  Tue Dec 25 22:07:13 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 90A2D63D82E
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 25 Dec 2012 22:07:13 +0000 (UTC)
Message-Id: <20121225220712.72F6A63D82E@www.NetBSD.org>
Date: Tue, 25 Dec 2012 22:07:12 +0000 (UTC)
From: george@galis.org
Reply-To: george@galis.org
To: gnats-bugs@NetBSD.org
Subject: dhcpcd resets mtu to 576 on Gbps
X-Send-Pr-Version: www-1.0

>Number:         47364
>Category:       bin
>Synopsis:       dhcpcd resets mtu to 576 on Gbps
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 25 22:10:00 +0000 2012
>Closed-Date:    Fri Sep 30 08:23:52 +0000 2016
>Last-Modified:  Fri Sep 30 08:23:52 +0000 2016
>Originator:     George Georgalis
>Release:        6.0 cdrom iso
>Organization:
>Environment:
NetBSD 6.0 (GENERIC) i386
>Description:
The install used dhcp fine but on first boot, dhcpcd (as configured by install) sets the wm0 mtu to 576 on a Gb wm0.

This doesn't completely break networking, but there are so many "discarding oversize frame" errors that it's pretty bad.

I don't understand why ifconfig cannot set the mtu but dhcpcd can???

More troubleshooting details on this thread
Date: Thu, 13 Dec 2012 20:18:27 -0800
Message-ID: <CAHK3FNzSDbZuOvUAakAjDkfYi+2KG2Ermk7ubjnf+dJn=mNzKg@mail.gmail.com>
Subject: discarding oversize frame
From: George Georgalis <george@galis.org>
To: netbsd-users@netbsd.org


>How-To-Repeat:
This problem was discovered on VirtualBox running on Windows 7 (don't get me started). Win7 OS reports physical card:
Intel(R) 82579LM Gigabit Network Connection 

The laptop is connected to (wifi and) a Cisco IP Phone 7975, which supports Gigabit and functions as primary gateway. I don't know what the phone is connected to but that switch probably has fibre to the backbone.

The problem persisted in both VirtualBox and VMplayer. It is unknown why there is not an issue for installer kernel/binaries with dhcp auto conf... The iso-cd network install was fast.

First boot in VMplayer also failed with mtu/framesize errors. When switched from installer written network dhcp config, to dhclient $int invoked from /etc/ifconfig.wm0 the problem was solved.
>Fix:
I won't be providing any network dumps but I can followup with config cause/effect tests if requested.

>Release-Note:

>Audit-Trail:
From: "Roy Marples" <roy@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47364 CVS commit: src/external/bsd/dhcpcd/dist
Date: Fri, 21 Jun 2013 19:33:08 +0000

 Module Name:	src
 Committed By:	roy
 Date:		Fri Jun 21 19:33:08 UTC 2013

 Update of /cvsroot/src/external/bsd/dhcpcd/dist
 In directory ivanova.netbsd.org:/tmp/cvs-serv6066

 Log Message:
 Import dhcpcd-6.0.0 with the following changes:
  * DHCPv6 support
  * wpa_supplicant hook script
  * route IPv4 addresses to 127.0.0.1 for machine centric traffic
  * DHCPv6 Prefix Delegation support
  * DHCPv6 FQDN support
  * Control existing IPv4 routes
  * less spamy to syslog by default
  * IPv6 protocols now wait for a valid LL address before starting
  * IPv6 DAD support now listens to kernel for more accurate timings
  * IPv4 code split out more cleanly so dhcpcd can be compiled for
    IPv4, IPv6 or IPv4 AND IPv6
  * MTU is no longer requested by default
  * a DUID is now generated in /etc/dhcpcd.duid and this is used as a 
    client ID for DHCPv4 and DHCPv6
    This does mean that you may get new DHCPv4 addresses

 Many bugs have also been fixed along the way and this release addresses
 the following PR's

 PR bin/47364
 PR bin/47502
 PR bin/47666
 PR bin/47699
 PR bin/47775
 PR bin/47776

 Status:

 Vendor Tag:	roy
 Release Tags:	dhcpcd_6_0_0

 U src/external/bsd/dhcpcd/dist/common.c
 U src/external/bsd/dhcpcd/dist/control.c
 U src/external/bsd/dhcpcd/dist/dhcpcd.c
 U src/external/bsd/dhcpcd/dist/duid.c
 U src/external/bsd/dhcpcd/dist/eloop.c
 U src/external/bsd/dhcpcd/dist/if-options.c
 U src/external/bsd/dhcpcd/dist/if-pref.c
 U src/external/bsd/dhcpcd/dist/net.c
 N src/external/bsd/dhcpcd/dist/script.c
 N src/external/bsd/dhcpcd/dist/dhcp-common.c
 U src/external/bsd/dhcpcd/dist/bpf.c
 U src/external/bsd/dhcpcd/dist/if-bsd.c
 U src/external/bsd/dhcpcd/dist/platform-bsd.c
 U src/external/bsd/dhcpcd/dist/arp.c
 C src/external/bsd/dhcpcd/dist/dhcp.c
 N src/external/bsd/dhcpcd/dist/ipv4.c
 U src/external/bsd/dhcpcd/dist/ipv4ll.c
 U src/external/bsd/dhcpcd/dist/ipv6.c
 U src/external/bsd/dhcpcd/dist/ipv6rs.c
 U src/external/bsd/dhcpcd/dist/ipv6ns.c
 N src/external/bsd/dhcpcd/dist/dhcp6.c
 C src/external/bsd/dhcpcd/dist/dhcpcd.conf
 C src/external/bsd/dhcpcd/dist/dhcpcd-run-hooks.8.in
 U src/external/bsd/dhcpcd/dist/dhcpcd-run-hooks.in
 C src/external/bsd/dhcpcd/dist/dhcpcd.8.in
 U src/external/bsd/dhcpcd/dist/dhcpcd.conf.5.in
 U src/external/bsd/dhcpcd/dist/arp.h
 C src/external/bsd/dhcpcd/dist/bpf-filter.h
 U src/external/bsd/dhcpcd/dist/common.h
 U src/external/bsd/dhcpcd/dist/config.h
 U src/external/bsd/dhcpcd/dist/control.h
 U src/external/bsd/dhcpcd/dist/defs.h
 N src/external/bsd/dhcpcd/dist/dhcp-common.h
 U src/external/bsd/dhcpcd/dist/dhcp.h
 N src/external/bsd/dhcpcd/dist/dhcp6.h
 U src/external/bsd/dhcpcd/dist/dhcpcd.h
 U src/external/bsd/dhcpcd/dist/duid.h
 U src/external/bsd/dhcpcd/dist/eloop.h
 U src/external/bsd/dhcpcd/dist/if-options.h
 U src/external/bsd/dhcpcd/dist/if-pref.h
 N src/external/bsd/dhcpcd/dist/ipv4.h
 U src/external/bsd/dhcpcd/dist/ipv4ll.h
 U src/external/bsd/dhcpcd/dist/ipv6.h
 U src/external/bsd/dhcpcd/dist/ipv6ns.h
 U src/external/bsd/dhcpcd/dist/ipv6rs.h
 U src/external/bsd/dhcpcd/dist/net.h
 U src/external/bsd/dhcpcd/dist/platform.h
 N src/external/bsd/dhcpcd/dist/script.h
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/01-test
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/02-dump
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/10-mtu
 N src/external/bsd/dhcpcd/dist/dhcpcd-hooks/10-wpa_supplicant
 N src/external/bsd/dhcpcd/dist/dhcpcd-hooks/15-timezone
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/20-resolv.conf
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/29-lookup-hostname
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/30-hostname
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/50-ntp.conf
 U src/external/bsd/dhcpcd/dist/dhcpcd-hooks/50-ypbind

 5 conflicts created by this import.
 Use the following command to help the merge:

 	cvs checkout -jroy:yesterday -jroy src/external/bsd/dhcpcd/dist

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 28 Sep 2013 06:56:05 +0000
State-Changed-Why:
Is this fixed at this point?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 30 Sep 2016 08:23:52 +0000
State-Changed-Why:
feedback timeout


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.