Import dhcpcd-6.0.0 with the following changes:  * DHCPv6 support  * wpa_supplicant hook script  * route IPv4 addresses to 127.0.0.1 for machine centric traffic  * DHCPv6 Prefix Delegation support  * DHCPv6 FQDN support  * Control existing IPv4 routes  * less spamy to syslog by default  * IPv6 protocols now wait for a valid LL address before starting  * IPv6 DAD support now listens to kernel for more accurate timings  * IPv4 code split out more cleanly so dhcpcd can be compiled for    IPv4, IPv6 or IPv4 AND IPv6  * MTU is no longer requested by default  * a DUID is now generated in /etc/dhcpcd.duid and this is used as a    client ID for DHCPv4 and DHCPv6    This does mean that you may get new DHCPv4 addresses

Many bugs have also been fixed along the way and this release addresses
the following PR's

PR bin/47364
PR bin/47502
PR bin/47666
PR bin/47699
PR bin/47775
PR bin/47776