external/bsd/dhcpcd/dist/ipv4.c
@@ -1,5 +1,5 @@
 #include <sys/cdefs.h>
- __RCSID("$NetBSD: ipv4.c,v 1.1 2013/06/21 19:33:07 roy Exp $");
+ __RCSID("$NetBSD: ipv4.c,v 1.1.1.1 2013/06/21 19:33:07 roy Exp $");
 
 /*
  * dhcpcd - DHCP client daemon
