external/bsd/dhcpcd/dist/ipv4.h
@@ -1,4 +1,4 @@
-/* $NetBSD: ipv4.h,v 1.1 2013/06/21 19:33:08 roy Exp $ */
+/* $NetBSD: ipv4.h,v 1.1.1.1 2013/06/21 19:33:08 roy Exp $ */
 
 /*
  * dhcpcd - DHCP client daemon
